Add Drupal 11 compatibility

--- a/simple_sqlite_vacuum.info.yml
+++ b/simple_sqlite_vacuum.info.yml
@@ -1,4 +1,4 @@
 name: Simple Sqlite Vacuum
 type: module
 description: 'A simple module that vacuums all sqlite database connections daily.'
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^8 || ^9 || ^10 || ^11
